--- a/src/app/components/admin/page-graficos/page-graficos.component.html
+++ b/src/app/components/admin/page-graficos/page-graficos.component.html
@@ -38,6 +38,10 @@
                         <div [chart]="chart4" *ngIf="cuatro"></div>
                         <button class="btn btn-secondary" *ngIf="cuatro" (click)="descargar(4)"><i
                                 class="fa fa-download"></i> Descargar excel</button>
+
+                        <div [chart]="chart5" *ngIf="cinco"></div>
+                        <button class="btn btn-secondary" *ngIf="cinco" (click)="descargar(5)"><i
+                                class="fa fa-download"></i> Descargar excel</button>
                     </div>
                 </div>
             </div>
