--- a/src/app/components/mis-turnos/mis-turnos.component.html
+++ b/src/app/components/mis-turnos/mis-turnos.component.html
@@ -39,7 +39,7 @@
                             <td class="text-left" class="text-center">{{turno.profesional!.nombre}} </td>
                             <td class="text-left" class="text-center">{{turno.especialidad!.nombre}} </td>
                             <td class="text-left" class="text-center">{{turno.paciente!.nombre}}</td>
-                            <td class="text-left" class="text-center">{{turno.estado}}</td>
+                            <td class="text-left" class="text-center estado">{{turno.estado}}</td>
                             <td class="text-left" class="text-center">
                                 <button type="button" class="btn btn-danger" title="Cancelar turno"
                                     (click)="cancelarTurno(turno)"
